--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #bd5d38;
+  --bs-primary: #355cb8;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -41,7 +41,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
+  --bs-primary-rgb: 53, 92, 184;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -237,11 +237,11 @@ sup {
 }
 
 a {
-  color: #e74d10;
+  color: #355cb8;
   text-decoration: underline;
 }
 a:hover {
-  color: #974a2d;
+  color: #6c757d;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
